<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_white"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_a_photo"
                android:padding="8dp"
                android:textSize="22sp"
                android:textColor="@color/dark_brown"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_selection"
                android:padding="4dp"
                android:gravity="center"/>


        </LinearLayout>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_choose_from_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_from_facebook"
            android:textColor="@color/blue_link_color"
            android:padding="8dp"
            android:textSize="15sp"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/txt_take_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:textColor="@color/blue_link_color"
            android:padding="8dp"
            android:textSize="15sp"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/txt_choose_existing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_existing"
            android:padding="8dp"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/blue_link_color"
            android:gravity="center"/>

    </LinearLayout>


</LinearLayout>