<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bs_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/ll_login_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            android:orientation="horizontal"
            android:focusable="true"
            android:clickable="true"
            android:visibility="gone">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_user_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:scaleType="centerCrop"
                app:riv_border_width="0dip"
                app:riv_corner_radius="10dip"
                app:riv_mutate_background="true"
                app:riv_oval="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_log_out_root"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/teal"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/toolbar_gradient"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/login_dashboard_title"
                android:textColor="@color/dark_brown"
                android:textSize="20sp"
                android:visibility="visible" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/drawer_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_nav_profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/profile"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_mail_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_mail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/mail_box"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_collection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_collections" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/collection"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_upgrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_upgrade" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/upgrade"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_nav_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/setting"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_nav_about_us" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/about_us"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_nav_logout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/log_out"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>